fixed bug where height was not being calculated on safari

--- a/src/stylus/components/_navbar.styl
+++ b/src/stylus/components/_navbar.styl
@@ -41,6 +41,7 @@
   &__items
     list-style-type: none
     padding: 0
+    height: 100%
     
     > li
       height: 100%
